# cpp-chess-implementation

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
include/core/common/: position.hpp
include/domain/board/chessboard/: board_builder.hpp  chess_board.hpp
include/domain/game/chessgame/: chess_game.hpp
include/domain/history/chesshistory/: chess_histroy.hpp
include/domain/move/chessmove/: chess_move.hpp  chess_move_generator.hpp  chess_move_generator_factory.hpp  chess_move_validator.hpp
include/domain/piece/chesspiece/: bishop_piece.hpp  chess_piece_factory.hpp  king_piece.hpp  knight_piece.hpp  pawn_piece.hpp  queen_piece.hpp  rook_piece.hpp
include/domain/pieces/chesspiece/: bischop_piece.hpp  king_piece.hpp  pawn_piece.hpp  queen_piece.hpp
include/domain/pieces/othergamepiece/: .gitkeep
include/domain/player/chessplayer/: chess_player.hpp
include/interfaces/board/: IBoard.hpp  IChessBoard.hpp
include/interfaces/game/: IGame.hpp  IGameRules.hpp
include/interfaces/history/: IHistory.hpp
include/interfaces/io/: IInput.hpp  IOutput.hpp
include/interfaces/logging/: ILogger.hpp
include/interfaces/move/: IMove.hpp  IMoveGenerator.hpp  IMoveStrategy.hpp  IMoveValidator.hpp
include/interfaces/parser/: IParser.hpp
include/interfaces/piece/: IChessPiece.hpp  IPiece.hpp
include/interfaces/player/: IPlayer.hpp
include/interfaces/repository/: IRepository.hpp
include/interfaces/rules/: IChessRules.hpp  IRules.hpp
src/: CMakeLists.txt
tests/: CMakeLists.txt
tests/domain/move/: test_move.cpp
(+52 files in other folders)
